--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,6 +1,6 @@
 name: sample-vite-react
 services:
-- environment_slug: node-js
+- environment_slug: Dockerfile
   github:
     branch: main
     deploy_on_push: false
